# little-research-lab

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  LIVED_EXPERIENCE_EXECUTIVE_BRIEF.md  README.md  RESTART_PROMPT.md  debug_assets.py  fly.toml  little-research-lab-v3_coding_agent_system_prompt.md  little-research-lab-v3_decisions.md  little-research-lab-v3_evolution.md  little-research-lab-v3_rules.yaml  little-research-lab-v3_spec.md  little-research-lab-v3_tasklist.md  openapi.json  pyproject.toml  research-lab-bio_coding_agent_system_prompt.md  research-lab-bio_decisions.md  research-lab-bio_evolution.md  research-lab-bio_spec.md  research-lab-bio_tasklist.md  rules.yaml  seed_db.py  update.md
.github/workflows/: ci.yml
archive/migration-2026-01-12/: QA_REVIEW_2026-01-12.md  REMEDIATION_PLAN.md  RETROSPECTIVE_2026-01-12_FOLLOWUP.md  RETROSPECTIVE_v2.md  restart_prompt12jan26.md
archive/research-lab-bio/: research-lab-bio_evolution.md  research-lab-bio_quality_gates.md  research-lab-bio_rules.yaml
docs/: ops.md
docs/discovery/: README.md  v4_spike.md
docs/ops/: README.md
frontend/: .dockerignore  Dockerfile  fly.toml  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: api-config.tsx
frontend/hooks/: useEngagementTracking.ts
frontend/lib/: extractText.ts  monetization.ts
frontend/tests/: admin-mocked.spec.ts  content-lifecycle.spec.ts  newsletter.spec.ts  paywall.spec.ts  reader-experience.spec.ts  regression.spec.ts
little-research-lab-v3_playwright_pack/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts
little-research-lab-v3_playwright_pack/docs/: coverage.md  recommended-testids.md
manifests/: component_manifest.json
migrations/: 001_initial.sql  002_engagement_sessions.sql  003_newsletter_subscribers.sql  004_content_tier.sql
schemas/: manifest.schema.json
scripts/: backup.py  privacy_schema_check.py  quality_gates.py  restore_drill.py  run_quality_gates.py
src/adapters/: __init__.py  clock.py  dev_email.py  dev_jobs.py  local_storage.py  payment_stub.py  sqlite_db.py  time_london.py
src/api/: auth_utils.py  deps.py  main.py  schemas.py
src/app_shell/: asset_routes.py  cli.py  config.py  invite_routes.py  public_content.py  public_home.py  rate_limit.py  router.py
src/core/: __init__.py  entities.py
src/domain/: blocks.py  entities.py  policy.py  sanitize.py  state.py
src/manifest/: check.py  generate.py
src/ports/: auth.py  clock.py  filestore.py  renderer.py  repo.py
src/rules/: loader.py  models.py  v4_loader.py
src/services/: DEPRECATED.md  __init__.py  asset.py  auth.py  bootstrap.py  collab.py  content.py  invite.py  publish.py
src/shell/: __init__.py
src/ui/: context.py  layout.py  main.py  state.py  theme.py
tests/: __init__.py  conftest.py  test_smoke.py  test_structure.py
tests/api/: test_admin_analytics.py  test_admin_audit.py  test_outbound.py
tests/integration/: __init__.py  test_asset_repo.py  test_backup_restore.py  test_collab_flow.py  test_invite_flow.py  test_link_repo.py  test_migrations.py  test_sqlite_repos.py  test_user_admin.py  test_user_journey.py  test_user_repo.py
tests/regression/: __init__.py  test_invariants.py
tests/unit/: __init__.py  test_admin_assets_api.py  test_admin_links_api.py  test_admin_newsletter_api.py  test_admin_preview_api.py  test_admin_redirects_api.py  test_admin_schedule_api.py  test_admin_settings_api.py  test_analytics_aggregate.py  test_analytics_attrib.py  test_analytics_dedupe.py  test_analytics_ingest.py  test_analytics_ingest_api.py  test_asset_service.py  test_assets.py  test_assets_component_set_latest.py  test_audit.py  test_audit_hooks.py  test_auth_adapters.py  test_auth_service.py  test_backup_restore.py  test_blocks.py  test_bootstrap.py  test_caching_policy.py  test_canonical.py  test_ci_config.py  test_clock_adapter.py  test_content.py  test_content_service.py  test_content_tier.py  test_db_ports.py  test_design_system.py  test_dev_email.py  test_domain.py  test_email_port.py  test_filestore.py  test_health.py  test_jobs.py  test_link_hub_template.py  test_links_service.py  (+33 more)
(+381 files in other folders)
