[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-lab-bio"
version = "0.1.0"
description = "A link-in-bio style public landing page with rich content and administration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Flet web stack - all versions pinned for compatibility
    "flet>=0.25.0,<0.30.0",  # Pin to 0.2x versions - app not compatible with 0.80+ yet
    "flet-web>=0.25.0,<0.30.0",  # Web frontend for Flet
    "websockets>=12.0,<14.0",  # Pin to avoid API changes in 14.0+ that break Flet 0.28
    "starlette>=0.36.0,<0.40.0",  # Pin for Flet 0.28 compatibility
    "fastapi>=0.109.0,<0.112.0",  # Pin for starlette <0.40 compatibility
    "uvicorn>=0.27.0,<0.35.0",  # Pin for Flet 0.28 compatibility
    # App dependencies
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "argon2-cffi>=23.1.0",
    "matplotlib>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-json-report>=1.5.0",
    "ruff>=0.8.0",
    "mypy>=1.6.0",
    "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
